--- a/src/html/postMessage_req.html
+++ b/src/html/postMessage_req.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <button id="button">OPEN NEW WINDOW</button>
+    <p><input type="text" id="input" placeholder="input something"></p>
     <script src="../js/postMessage_req.bundle.js"></script>
 </body>
 
