--- a/src/html/b.html
+++ b/src/html/b.html
@@ -4,20 +4,18 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="http://web.yystatic.com/public/global/base/css/pc_reset.css?v=1">
-    <link rel="stylesheet" href="../css/index.bundle.css">
+    <link rel="stylesheet" href="../css/b.bundle.css">
 </head>
 
 <body>
     <div id="nick">用户名</div>
-    <a href="./login.html" id="login" target="_blank">请登录</a></br>
+    <a href="./login.html" target="_blank">请登录</a></br>
     <ul>
         <li><a href="./a.html" target="_blank">a page</a></li>
         <li><a href="./b.html" target="_blank">b page</a></li>
         <li><a href="./c.html" target="_blank">c page</a></li>
     </ul>
-    <script src="//res.cont.yy.com/js/??jquery-1.8.0.min.js" type="text/javascript" charset="utf-8"></script>
-
-    <script src="../js/index.bundle.js" type="text/javascript"></script>
+    <script src="../js/b.bundle.js" type="text/javascript"></script>
 </body>
 
 </html>
