--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="nick">用户名</div>
     <a href="./login.html" id="login" target="_blank">请登录</a></br>
+    <a href="javascript:" id="logout">退出</a></br>
     <ul>
         <li><a href="./a.html" target="_blank">a page</a></li>
         <li><a href="./b.html" target="_blank">b page</a></li>
